Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/Trust_Account_Requirement_Parameter__mdt.object-meta.xml
<CustomObject>
    <description>Combination of parameters to determine if a trust account is required</description>
    <label>Trust Account Requirement Parameter</label>
    <pluralLabel>Trust Account Requirement Parameters</pluralLabel>
</CustomObject>