Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>PTA, RTA, or PTA and RTA</description>
    <inlineHelpText>Account Type includes:
-PTA
-RTA, or
-PTA and RTA</inlineHelpText>
    <label>Account Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>