Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/fields/Contract_Value_From__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_From__c</fullName>
    <description>Contract value starts from (excluding GST). Must have a value of minimum 0.</description>
    <inlineHelpText>Contract value starts from (excluding GST). Must have a value of minimum 0.</inlineHelpText>
    <label>Contract Value From</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>