Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/fields/Contract_Value_Less_Than__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_Less_Than__c</fullName>
    <description>Contract value less than (excluding GST) OR leave this field blank</description>
    <inlineHelpText>Contract value less than (excluding GST) OR leave this field blank</inlineHelpText>
    <label>Contract Value Less Than</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>