Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/fields/Contracting_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Party_Type__c</fullName>
    <description>Who is the contracting party (i.e. principal)?
- Local government/State authority
- State government
- HHS (Hospital and Health Service)
- Private
Note: Multiple answers allowed by adding &apos;|&apos; as delimiter</description>
    <inlineHelpText>Who is the contracting party (i.e. principal)?
- Local government/State authority
- State government
- HHS
- Private
Note: Multiple answers allowed by adding &apos;|&apos; as delimiter</inlineHelpText>
    <label>Contracting Party Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>