Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/fields/Date_End__c.field-meta.xml
<CustomField>
    <fullName>Date_End__c</fullName>
    <description>Contract date range end OR leave this field blank</description>
    <inlineHelpText>Contract date range end OR leave this field blank</inlineHelpText>
    <label>Contract Date Range End</label>
    <type>Date</type>
</CustomField>