Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/fields/Date_From__c.field-meta.xml
<CustomField>
    <fullName>Date_From__c</fullName>
    <description>Contract date range begin from OR leave this field blank</description>
    <inlineHelpText>Contract date range begin from OR leave this field blank</inlineHelpText>
    <label>Contract Date Range From</label>
    <type>Date</type>
</CustomField>