Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates this requirement is currently in use</description>
    <inlineHelpText>Indicates this requirement is currently in use</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>