Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/fields/Is_PTA_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_PTA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a Project Trust Account Required</description>
    <inlineHelpText>Indicates if a Project Trust Account Required</inlineHelpText>
    <label>Is PTA Required</label>
    <type>Checkbox</type>
</CustomField>