Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Displayed message to explain about the fulfilment of the trust account requirement</description>
    <inlineHelpText>Displayed message to explain about the fulfilment of the trust account requirement</inlineHelpText>
    <label>Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>