Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/fields/Over_50_Percent__c.field-meta.xml
<CustomField>
    <fullName>Over_50_Percent__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is more than 50% of the contract price for project trust work?</description>
    <inlineHelpText>Is more than 50% of the contract price for project trust work?</inlineHelpText>
    <label>Is Over 50 Percent For Project</label>
    <type>Checkbox</type>
</CustomField>