Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/fields/Subcontractor_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Engaged__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is there, or will there be, at least one subcontractor engaged for the work?</description>
    <inlineHelpText>Is there, or will there be, at least one subcontractor engaged for the work?</inlineHelpText>
    <label>Is Subcontractor Engaged For the Work</label>
    <type>Checkbox</type>
</CustomField>