Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/fields/Trust_Account_Message__c.field-meta.xml
<CustomField>
    <fullName>Trust_Account_Message__c</fullName>
    <label>Message</label>
    <referenceTo>Trust_Account_Message__mdt</referenceTo>
    <relationshipLabel>Trust Account Requirement Parameters</relationshipLabel>
    <relationshipName>Trust_Account_Requirement_Parameters</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>