Salesforce/force-app/main/default/objects/Trust_Account_Requirement_Parameter__mdt/listViews/Full_with_Details.listView-meta.xml
<ListView>
    <fullName>Full_with_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_PTA_Required__c</columns>
    <columns>Contracting_Party_Type__c</columns>
    <columns>Date_From__c</columns>
    <columns>Contract_Value_From__c</columns>
    <filterScope>Everything</filterScope>
    <label>Full with Details</label>
    <language>en_US</language>
</ListView>